Having trouble with flexbox, but adding the style.css file and modified index.html file

--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="style.css">
 	<title></title>
+  <h1>hello, my flexbox isn't working</h1>
 </head>
 <body>
-
-	<img alt="Google" height="92" id="hplogo" src="/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" srcset="/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png 1x, /images/branding/googlelogo/2x/googlelogo_color_272x92dp.png 2x" style="padding-top:109px" width="272" onload="typeof google==='object'&amp;&amp;google.aft&amp;&amp;google.aft(this)" data-iml="1566951912046" data-atf="1">
-
+<div class= "logo">
+	<img alt= "Google" height="92" id="hplogo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" srcset="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" onload="typeof google==='object'&amp;&amp;google.aft&amp;&amp;google.aft(this)" data-iml="1566951912046" data-atf="1">
+</div>
+<form id="search-form">
+    <div class="searchbar">
+    </form>
+    </div>
+    <div class="googlesearch">
+      <input style="text-align:center;" value="Google Search" aria-label="Google Search" type="submit" data-ved="0ahUKEwjo1KrpyprnAhUOXKwKHf2MAU0Q4dUDCAw">
+      <input style="text-align:center;" value="I'm Feeling Lucky" aria-label="I'm Feeling Lucky" id="gbqfbb" name="btnI" type="submit" data-ved="0ahUKEwjlrpOJhp_nAhVQPq0KHeG7BdcQnRsIDQ">
+    </div>
 </body>
 </html>
