FINISHED GOOGLE HOMEPAGE

--- a/index.html
+++ b/index.html
@@ -1,21 +1,55 @@
+<!-- Google Homepage odin Project -->
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Google</title>
+  <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="style.css">
-	<title></title>
-  <h1>hello, my flexbox isn't working</h1>
 </head>
 <body>
-<div class= "logo">
-	<img alt= "Google" height="92" id="hplogo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" srcset="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" onload="typeof google==='object'&amp;&amp;google.aft&amp;&amp;google.aft(this)" data-iml="1566951912046" data-atf="1">
+<!-- Top Nav Bar -->
+<div>
+  <ul>
+    <li class="fright" id="signin">Sign In</li>
+    <li class="fleft">About</li>
+    <li class="fleft">Store</li>
+    <li class="fright">Apps</li>
+    <li class="fright">Images</li>
+    <li class="fright">Gmail</li>
+  </ul>
 </div>
-<form id="search-form">
-    <div class="searchbar">
-    </form>
-    </div>
-    <div class="googlesearch">
-      <input style="text-align:center;" value="Google Search" aria-label="Google Search" type="submit" data-ved="0ahUKEwjo1KrpyprnAhUOXKwKHf2MAU0Q4dUDCAw">
-      <input style="text-align:center;" value="I'm Feeling Lucky" aria-label="I'm Feeling Lucky" id="gbqfbb" name="btnI" type="submit" data-ved="0ahUKEwjlrpOJhp_nAhVQPq0KHeG7BdcQnRsIDQ">
-    </div>
+<!-- End Top Nav Bar -->
+<!-- Middle of Page-->
+<center>
+<div class="logo">
+	<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
+</div>
+<!--Search Bar-->
+<div class="searchbar">
+<form>
+  <input type="text">
+</form>
+</div>
+<!--End of Search Box-->
+<!--Buttons-->
+<div>
+  <input type="submit" value="Google Search">
+  <input type="submit" value="I'm Feeling Lucky">
+</div>
+</center>
+<!--End of Buttons-->
+<!--End of Middle-->
+<!--Footer Bar-->
+<div class="fnav">
+  <ul Class="bottom">
+    <li class="footer">Advertising</li>
+    <li class="footer">Business</li>
+    <li class="footer">How Search Works</li>
+    <li class="rfooter">Settings</li>
+    <li class="rfooter">Terms</li>
+    <li class="rfooter">Privacy</li>
+  </ul>
+</div>
+<!--End of Footer Bar-->
 </body>
 </html>
